# TenderIntegrity

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: settings.py  thresholds.yaml
config/whitelist/: common_phrases.txt  legal_refs.txt  standard_refs.txt
doc/: 1.标书雷同与语义查重 — 需求设计与规划.md  三个核心场景产品方向说明.md  测试样本A_疑似围标投标文件.docx  测试样本B_疑似围标投标文件.docx
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  test-setup.ts
frontend/src/api/: client.ts  (+3 more)
scripts/: run_comparison.py  seed_whitelist.py  validate_corpus.py
src/analysis/: field_overlap_detector.py  keyword_extractor.py  price_analyzer.py  rare_token_analyzer.py  risk_synthesizer.py  scorer.py  similarity.py  structure_comparator.py  whitelist_filter.py
src/api/: dependencies.py  main.py
src/chains/: output_parsers.py  risk_reason_chain.py
src/document/: chunker.py  docx_meta.py  docx_parser.py  field_extractor.py  metadata_extractor.py  parser.py  pdf_parser.py  text_parser.py
src/report/: csv_exporter.py  generator.py  json_exporter.py  pdf_exporter.py
src/storage/: database.py  models.py
src/vectorstore/: client.py  embedding_service.py  repository.py
src/workflow/: graph.py  routers.py  state.py
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_document_parse.py
tests/unit/: test_chunker.py  test_docx_parser.py  test_field_extractor.py  test_output_parsers.py  test_price_analyzer.py  test_rare_token_analyzer.py  test_risk_synthesizer.py  test_scorer.py  test_structure_comparator.py  test_whitelist_filter.py
(+56 files in other folders)
