[project]
name = "tender-integrity"
version = "0.1.0"
description = "标书雷同与语义查重 - 医疗采购监管前置风险筛查工具"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "chardet>=5.2.0",
    "jieba>=0.42.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "weasyprint>=62.0",
    "greenlet>=3.3.2",
    "openai>=2.28.0",
    "langchain-openai>=1.1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests requiring real documents and models",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
